change: juiced up stonecutter breaking "animation" & nerfed stonecutter

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -314,14 +314,14 @@
   "tetra.stats.tool.striking": "Striking",
   "tetra.stats.tool.striking.tooltip": "Instantly harvests hit blocks, limited by swing speed",
   "tetra.stats.tool.sweeping": "Sweeping",
-  "tetra.stats.tool.sweeping.tooltip": "Instantly harvests several blocks on hit, limited by swing speed",
+  "tetra.stats.tool.sweeping.tooltip": "Instantly harvests several blocks on hit, limited by swing speed. Block hardness and tool efficiency affect the number of harvested blocks.",
 
   "tetra.stats.integrity": "Integrity",
   "tetra.stats.integrity.tooltip_positive": "This module provides §e%s§r integrity",
   "tetra.stats.integrity.tooltip_negative": "This module requires §e%s§r integrity",
 
   "tetra.stats.integrity_usage": "Integrity usage: %s/%s",
-  "tetra.stats.integrity_usage.tooltip": "Integrity is provided by some modules (often in a specific slot), while it is required by other modules and most improvements.",
+  "tetra.stats.integrity_usage.tooltip": "Integrity is provided by some modules (often in a specific slot), while it is required by other modules and most improvements",
 
   "tetra.variant_category.fabric.label": "Fabric",
   "tetra.variant_category.fibre.label": "Fibre",
@@ -2039,11 +2039,11 @@
   "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
   "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest tier/efficiency.",
   "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
-  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided hammer from any type of stone, the stone hammer provides tier two hammering capabilities\n\n§7A secondary hammer will be required to craft this",
+  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided hammer from any type of stone, the stone hammer provides tier two hammering capabilities",
   "tetra.advancements.upgrades.hammer_3.title": "Hammer III",
-  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support an iron hammer",
+  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7A secondary hammer will be required to craft this",
   "tetra.advancements.upgrades.hammer_4.title": "Hammer IV",
-  "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities",
+  "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support an iron hammer",
   "tetra.advancements.upgrades.hammer_5.title": "Hammer V",
   "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer using an upgraded forge hammer, the obsidian hammer provides tier five hammering capabilities",
   "tetra.advancements.upgrades.hammer_6.title": "Hammer VI",
