change: added advancement for hinting at stonecutter efficiency

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2002,6 +2002,8 @@
   "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer in a container and attach it to a handle, the earthpiercer can break several blocks in a line",
   "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
   "tetra.advancements.spelunking.stonecutter.description": "Find a stonecutter in a container and attach it to a hilt, the stonecutter can cut through stone in wide swathes",
+  "tetra.advancements.spelunking.stonecutter_enchant.title": "Arcane Amplifiers",
+  "tetra.advancements.spelunking.stonecutter_enchant.description": "Enchant a stonecutter with the efficiency enchantment to increase the amount of blocks broken in each sweep",
   "tetra.advancements.spelunking.find_bolt.title": "Universal Fastener",
   "tetra.advancements.spelunking.find_bolt.description": "Salvage some bolts from the ancient ruins",
   "tetra.advancements.spelunking.find_cell.title": "Thermal Container",
@@ -2019,7 +2021,7 @@
   "tetra.advancements.spelunking.hammer_unjam.title": "Maintenance Acquired",
   "tetra.advancements.spelunking.hammer_unjam.description": "Smack a jammed hammer head with a handheld hammer of at least tier 4 to get the forge hammer back into a working state",
   "tetra.advancements.spelunking.hammer_power.title": "Combustion Power-up",
-  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase its hammer tier by 1, hammer upgrades like the combustion chamber can be found in crates and containers",
+  "tetra.advancements.spelunking.hammer_power.description": "Attach a combustion chamber to a forge hammer to increase its hammer tier by 1\n\n§7Hammer upgrades like the combustion chamber can be found in crates and containers",
   "tetra.advancements.spelunking.hammer_craft.title": "Magmatic Press Channel",
   "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 5+ hammering",
   "tetra.advancements.spelunking.hammer_remove.title": "Clawfinger",
