change: added vanilla crafting recipes for stone hammers, removed hammer requirements for crafting tier 1 & 2 hammers

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1170,8 +1170,6 @@
   "tetra.module.double/basic_hammer.material_name": "%s hammer",
   "tetra.module.double/basic_hammer.prefix": "%s",
 
-  "tetra.variant.basic_hammer/oak": "Wooden mallet",
-  "tetra.variant.basic_hammer/oak.item_name": "Mallet",
   "tetra.variant.basic_hammer/oak.prefix": "Wooden",
 
   "tetra/schematic/double/adze/adze.name": "Adze head",
@@ -2056,15 +2054,15 @@
   "tetra.advancements.upgrades.shield_upgrade.description": "Upgrade a shield in a workbench",
   "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
   "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest tier/efficiency.",
-  "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
-  "tetra.advancements.upgrades.hammer_2.description": "Craft a double-sided hammer from any type of stone, the stone hammer provides tier two hammering capabilities",
-  "tetra.advancements.upgrades.hammer_3.title": "Hammer III",
-  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7A secondary hammer will be required to craft this",
-  "tetra.advancements.upgrades.hammer_4.title": "Hammer IV",
-  "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support an iron hammer",
-  "tetra.advancements.upgrades.hammer_5.title": "Hammer V",
-  "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer using an upgraded forge hammer, the obsidian hammer provides tier five hammering capabilities",
-  "tetra.advancements.upgrades.hammer_6.title": "Hammer VI",
+  "tetra.advancements.upgrades.hammer_2.title": "Hammer II (Stone)",
+  "tetra.advancements.upgrades.hammer_2.description": "Upgrade your hammer to a double-sided stone hammer (any type of stone), the stone hammer provides tier two hammering capabilities\n\n§7Can be crafted in a crafting table in the same way as wooden hammers",
+  "tetra.advancements.upgrades.hammer_3.title": "Hammer III (Iron)",
+  "tetra.advancements.upgrades.hammer_3.description": "Craft a double-sided iron hammer, the iron hammer provides tier three hammering capabilities\n\n§7Can only be crafted in a workbench, requires a secondary hammer in your inventory to craft",
+  "tetra.advancements.upgrades.hammer_4.title": "Hammer IV (Blackstone)",
+  "tetra.advancements.upgrades.hammer_4.description": "Craft a double-sided blackstone hammer, the blackstone hammer provides tier four hammering capabilities\n\n§7An upgraded handle or a binding will provide enough integrity to support a blackstone hammer",
+  "tetra.advancements.upgrades.hammer_5.title": "Hammer V (Obsidian)",
+  "tetra.advancements.upgrades.hammer_5.description": "Craft a double-sided obsidian hammer using an upgraded forge hammer, the obsidian hammer provides tier five hammering capabilities\n\n§7Information about the forge hammer can be found in the spelunking advancements tab",
+  "tetra.advancements.upgrades.hammer_6.title": "Hammer VI (Netherite)",
   "tetra.advancements.upgrades.hammer_6.description": "Craft a double-sided netherite hammer using a fully upgraded forge hammer, the netherite hammer provides tier six hammering capabilities",
   "tetra.advancements.upgrades.repairs.title": "[?] Repairing modular items",
   "tetra.advancements.upgrades.repairs.description": "Modular items can be repaired in a workbench.\n * Repairing an item will require materials (and appropriate tools) for one of its modules\n * Repairing will cycle over all of the item's modules\n * Repairing magically unstable modules will cost experience\n * Each repair fully restores the durability of the item",
