change: tweaked destabilization behaviour & added details to craft button & magic bar tooltips

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -63,7 +63,7 @@
   "tetra.workbench.schematic_detail.craft": "Craft",
   "tetra.workbench.schematic_detail.back": "back",
   "tetra.workbench.schematic_detail.experience": "This action requires %d experience levels",
-  "tetra.workbench.schematic_detail.destabilize_tooltip": "This module is magically unstable, performing this action may cause its enchantments to destabilize into negative effects",
+  "tetra.workbench.schematic_detail.destabilize_tooltip": "This item has magically unstable modules, performing this action has a chance to affect the following modules negatively:",
   "tetra.workbench.schematic_detail.repair_tooltip": "Replaces the next module in the repair cycle, the item will be §efully repaired",
   "tetra.workbench.schematic_detail.no_material_tooltip":"This schematic require materials to craft",
   "tetra.workbench.schematic_detail.material_count_tooltip": "Insufficient amount of material provided",
@@ -476,8 +476,8 @@
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
   "item.tetra.modular.magic_capacity.label": "Magic capacity",
-  "item.tetra.modular.magic_capacity.description": "The amount of magic this module can contain and how much of that capacity is in use\n \n§7Magic capacity: §e%s\n§7Capacity usage: §e%s",
-  "item.tetra.modular.magic_capacity.description_extended": "§7The capacity may be exceeded, but working the module will cost experience and magical improvements may destabilize and cause negative effects when the item is altered",
+  "item.tetra.modular.magic_capacity.description": "The amount of magic this module can hold and how much of that capacity is in use\n \n§7Magic capacity: §e%s\n§7Capacity usage: §e%s\n \n§7Repair xp cost: §e%s\n§7Destabilization risk: §e%s%%",
+  "item.tetra.modular.magic_capacity.description_extended": "§7The capacity may be exceeded but repairing the module will cost experience and magical improvements may destabilize and cause negative effects when the item is altered",
   "item.tetra.modular.repair_material.label": "Repair material:",
   "item.tetra.modular.repair_material.empty": "Does not need to be repaired",
 
