change: improved description for tool stats change: removed stat values from schematic descriptions

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -320,6 +320,8 @@
   "tetra.stats.cut.tooltip": "This item can be used for cutting, usable for crafting and for breaking webs and plants\n \n§7Cut tier: §e%s\n§7Cut efficiency: §e%s",
   "tetra.stats.pry.tooltip": "This item can be used for prying things open, usable for salvaging\n \n§7Pry tier: §e%s\n§7Pry efficiency: §e%s",
 
+  "tetra.stats.tool.tooltip_extended": "A higher tier is required for harvesting tougher blocks and for crafting with tougher materials. Efficiency determines how fast this item can break blocks.",
+
   "tetra.stats.tool.striking": "Striking",
   "tetra.stats.tool.striking.tooltip": "Instantly harvests hit blocks, limited by swing speed",
   "tetra.stats.tool.sweeping": "Sweeping",
@@ -654,57 +656,57 @@
   "tetra/schematic/cleanse.description": "Cleanse negative effects caused by magic instability.\n \nExperience cost is increased based on exceeded magic capacity and the amount of instability effects.",
 
   "tetra/schematic/sword/shared_blade/hone_damage_1.name": "Hone: Damage I",
-  "tetra/schematic/sword/shared_blade/hone_damage_1.description": "Hone the module to increase the damage dealt by 0.5.",
+  "tetra/schematic/sword/shared_blade/hone_damage_1.description": "Hone the module to increase the damage dealt.",
   "tetra/schematic/sword/shared_blade/hone_damage_2.name": "Hone: Damage II",
-  "tetra/schematic/sword/shared_blade/hone_damage_2.description": "Further hone the damage improvement for this module, increasing the damage bonus from 0.5 to 1.",
+  "tetra/schematic/sword/shared_blade/hone_damage_2.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/shared_blade/hone_damage_3.name": "Hone: Damage III",
-  "tetra/schematic/sword/shared_blade/hone_damage_3.description": "Further hone the damage improvement for this module, increasing the damage bonus from 1 to 1.5.",
+  "tetra/schematic/sword/shared_blade/hone_damage_3.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/shared_blade/hone_damage_4.name": "Hone: Damage IV",
-  "tetra/schematic/sword/shared_blade/hone_damage_4.description": "Further hone the damage improvement for this module, increasing the damage bonus from 1.5 to 2.",
+  "tetra/schematic/sword/shared_blade/hone_damage_4.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/shared_blade/hone_damage_5.name": "Hone: Damage V",
-  "tetra/schematic/sword/shared_blade/hone_damage_5.description": "Further hone the damage improvement for this module, increasing the damage bonus from 2 to 3.",
+  "tetra/schematic/sword/shared_blade/hone_damage_5.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
 
   "tetra.improvement.blade_hone/damage.name": "Hone: Damage",
   "tetra.improvement.blade_hone/damage.description": "Increases damage dealt",
 
   "tetra/schematic/sword/shared_blade/hone_speed_1.name": "Hone: Speed I",
-  "tetra/schematic/sword/shared_blade/hone_speed_1.description": "Hone the module to increase the overall swing speed by 7%%.",
+  "tetra/schematic/sword/shared_blade/hone_speed_1.description": "Hone the module to increase the overall swing speed.",
   "tetra/schematic/sword/shared_blade/hone_speed_2.name": "Hone: Speed II",
-  "tetra/schematic/sword/shared_blade/hone_speed_2.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 7%% to 15%%.",
+  "tetra/schematic/sword/shared_blade/hone_speed_2.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/shared_blade/hone_speed_3.name": "Hone: Speed III",
-  "tetra/schematic/sword/shared_blade/hone_speed_3.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 15%% to 22%%.",
+  "tetra/schematic/sword/shared_blade/hone_speed_3.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/shared_blade/hone_speed_4.name": "Hone: Speed IV",
-  "tetra/schematic/sword/shared_blade/hone_speed_4.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 22%% to 30%%.",
+  "tetra/schematic/sword/shared_blade/hone_speed_4.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/shared_blade/hone_speed_5.name": "Hone: Speed V",
-  "tetra/schematic/sword/shared_blade/hone_speed_5.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 30%% to 40%%.",
+  "tetra/schematic/sword/shared_blade/hone_speed_5.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
 
   "tetra.improvement.blade_hone/speed.name": "Hone: Speed",
   "tetra.improvement.blade_hone/speed.description": "Increases swing speed",
 
   "tetra/schematic/sword/basic_hilt/hone_damage_1.name": "Hone: Damage I",
-  "tetra/schematic/sword/basic_hilt/hone_damage_1.description": "Hone the module to increase the overall damage by 5%%.",
+  "tetra/schematic/sword/basic_hilt/hone_damage_1.description": "Hone the module to increase the overall damage.",
   "tetra/schematic/sword/basic_hilt/hone_damage_2.name": "Hone: Damage II",
-  "tetra/schematic/sword/basic_hilt/hone_damage_2.description": "Further hone the damage improvement for this module, increasing the damage bonus from 5%% to 10%%.",
+  "tetra/schematic/sword/basic_hilt/hone_damage_2.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/basic_hilt/hone_damage_3.name": "Hone: Damage III",
-  "tetra/schematic/sword/basic_hilt/hone_damage_3.description": "Further hone the damage improvement for this module, increasing the damage bonus from 10%% to 15%%.",
+  "tetra/schematic/sword/basic_hilt/hone_damage_3.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/basic_hilt/hone_damage_4.name": "Hone: Damage IV",
-  "tetra/schematic/sword/basic_hilt/hone_damage_4.description": "Further hone the damage improvement for this module, increasing the damage bonus from 15%% to 20%%.",
+  "tetra/schematic/sword/basic_hilt/hone_damage_4.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
   "tetra/schematic/sword/basic_hilt/hone_damage_5.name": "Hone: Damage V",
-  "tetra/schematic/sword/basic_hilt/hone_damage_5.description": "Further hone the damage improvement for this module, increasing the damage bonus from 20%% to 25%%.",
+  "tetra/schematic/sword/basic_hilt/hone_damage_5.description": "Further hone the damage improvement for this module, increasing the damage bonus.",
 
   "tetra.improvement.hilt_hone/damage.name": "Hone: Damage",
   "tetra.improvement.hilt_hone/damage.description": "Increases damage dealt",
 
   "tetra/schematic/sword/basic_hilt/hone_speed_1.name": "Hone: Speed I",
-  "tetra/schematic/sword/basic_hilt/hone_speed_1.description": "Hone the module to increase the overall swing speed by 0.05.",
+  "tetra/schematic/sword/basic_hilt/hone_speed_1.description": "Hone the module to increase the overall swing speed.",
   "tetra/schematic/sword/basic_hilt/hone_speed_2.name": "Hone: Speed II",
-  "tetra/schematic/sword/basic_hilt/hone_speed_2.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 0.05 to 0.1.",
+  "tetra/schematic/sword/basic_hilt/hone_speed_2.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/basic_hilt/hone_speed_3.name": "Hone: Speed III",
-  "tetra/schematic/sword/basic_hilt/hone_speed_3.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 0.1 to 0.15.",
+  "tetra/schematic/sword/basic_hilt/hone_speed_3.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/basic_hilt/hone_speed_4.name": "Hone: Speed IV",
-  "tetra/schematic/sword/basic_hilt/hone_speed_4.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 0.15 to 0.2.",
+  "tetra/schematic/sword/basic_hilt/hone_speed_4.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
   "tetra/schematic/sword/basic_hilt/hone_speed_5.name": "Hone: Speed V",
-  "tetra/schematic/sword/basic_hilt/hone_speed_5.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 0.2 to 0.25.",
+  "tetra/schematic/sword/basic_hilt/hone_speed_5.description": "Further hone the swing speed improvement for this module, increasing the speed bonus.",
 
   "tetra.improvement.hilt_hone/speed.name": "Hone: Speed",
   "tetra.improvement.hilt_hone/speed.description": "Increases swing speed",
@@ -952,7 +954,7 @@
   "tetra.improvement.head_hone/speed.description": "Increases swing speed",
 
   "tetra/schematic/double/shared_head/hone_damage_flat_1.name": "Hone: Damage I",
-  "tetra/schematic/double/shared_head/hone_damage_flat_1.description": "Hone the module to increase the damage dealt by 0.5.",
+  "tetra/schematic/double/shared_head/hone_damage_flat_1.description": "Hone the module to increase the damage dealt.",
   "tetra/schematic/double/shared_head/hone_damage_flat_2.name": "Hone: Damage II",
   "tetra/schematic/double/shared_head/hone_damage_flat_2.description": "Further hone the damage improvement for this module.",
   "tetra/schematic/double/shared_head/hone_damage_flat_3.name": "Hone: Damage III",
